Changed heading and sub heading content and size for home componenet

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Lato';
+  font-family: 'Garamond';
 }
 
 h1,
@@ -8,7 +8,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Catamaran';
+  font-family: 'Garamond';
   font-weight: 800 !important;
 }
 
@@ -26,26 +26,6 @@ h6 {
 
 .rounded-pill {
   border-radius: 5rem;
-}
-
-.navbar-custom {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.navbar-custom .navbar-brand {
-  text-transform: uppercase;
-  font-size: 1rem;
-  letter-spacing: 0.1rem;
-  font-weight: 700;
-}
-
-.navbar-custom .navbar-nav .nav-item .nav-link {
-  text-transform: uppercase;
-  font-size: 0.8rem;
-  font-weight: 700;
-  letter-spacing: 0.1rem;
 }
 
 header.masthead {
@@ -66,7 +46,7 @@ header.masthead .masthead-content {
 }
 
 header.masthead .masthead-content .masthead-heading {
-  font-size: 4rem;
+  font-size: 50px;
 }
 
 header.masthead .masthead-content .masthead-subheading {
@@ -110,14 +90,14 @@ header.masthead .bg-circle-4 {
 
 @media (min-width: 992px) {
   header.masthead {
-    padding-top: calc(10rem + 55px);
+    padding-top: calc(4rem + 55px);
     padding-bottom: 10rem;
   }
   header.masthead .masthead-content .masthead-heading {
-    font-size: 6rem;
+    font-size: 70px;
   }
   header.masthead .masthead-content .masthead-subheading {
-    font-size: 4rem;
+    font-size: 25px;
   }
 }
 
